--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script> src=js/app.js</script>
+    <script src="js/app.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>The Movie King</h1>
     <h2>Feast on my superior opinions, intellect-starved peasants!</h2>
-    
+    <form id="add-item-form">
+        <div class="form-item">
+            <label for="title" >Title</label>
+            <input type="text" id="title"/>
+            <label for="director" >Director</label>
+            <input type="text" id="director"/>
+            <label for="review" >Five Word Review</label>
+            <input type="text" id="review"/>
+        </div>
+        <input type="submit" value="save"/>
+        
+
+
+    </form>
+
+    <h2>Current Reviews</h2>
+    <ul id="current-reviews"></ul>
 </body>
 </html>
