--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>5 Word Reviews</title>
     <script src="js/app.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -20,6 +20,7 @@
             <input type="text" id="review"/>
         </div>
         <input type="submit" value="save"/>
+        <input id='delete-button' type='button', value ='delete-all' />
         
 
 
