added worth watching checkbox

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <input type="text" id="director"/>
             <label for="review" >Five Word Review</label>
             <input type="text" id="review"/>
+            <input type = "checkbox", id="worth-a-watch"/>
+            <label for="worth-a-watch">Worth Watching</label>
+            <!-- <input type="radio", id="missable"/>
+            <label for="missable">Missable</label> -->
         </div>
         <input type="submit" value="save"/>
         <input id='delete-button' type='button', value ='delete-all' />
